sdk: require complete plugin sidecar tuples
Remove helper-side tuple repair from EasyNet provider pluginexec helpers across Go, Python, Rust, Java, and Node.

Require explicit causal_context and args objects before invoking plugin handlers so provider helpers only project daemon-admitted canonical frames.

Extend SPEC v2 helper matrix coverage to reject tuple defaulting and preserve cross-language behavior.